@@ -1,14 +1,17 @@
 package ru.yandex.practicum.filmorate.storage.film;
 
+import org.springframework.stereotype.Component;
+import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.model.Film;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
+@Component
 public class InMemoryFilmStorage implements FilmStorage {
 
     private final Map<Long, Film> films = new HashMap<>();
     private final Map<Long, Set<Long>> likes = new HashMap<>();
-
     private long nextId = 1;
 
     @Override
@@ -20,6 +23,9 @@ public class InMemoryFilmStorage implements FilmStorage {
 
     @Override
     public Film update(Film film) {
+        if (!films.containsKey(film.getId())) {
+            throw new NotFoundException("Film not found");
+        }
         films.put(film.getId(), film);
         return film;
     }
@@ -36,11 +42,17 @@ public class InMemoryFilmStorage implements FilmStorage {
 
     @Override
     public void addLike(Long filmId, Long userId) {
+        if (!films.containsKey(filmId)) {
+            throw new NotFoundException("Film not found");
+        }
         likes.computeIfAbsent(filmId, k -> new HashSet<>()).add(userId);
     }
 
     @Override
     public void removeLike(Long filmId, Long userId) {
+        if (!films.containsKey(filmId)) {
+            throw new NotFoundException("Film not found");
+        }
         Set<Long> filmLikes = likes.get(filmId);
         if (filmLikes != null) {
             filmLikes.remove(userId);
@@ -48,13 +60,33 @@ public class InMemoryFilmStorage implements FilmStorage {
     }
 
     @Override
-    public List<Film> getPopular(int count) {
+    public List<Film> getMostPopularFilms(int count, Integer year, Long genreId) {
         return films.values().stream()
                 .sorted((f1, f2) -> Integer.compare(
-                        likes.getOrDefault(f2.getId(), Set.of()).size(),
-                        likes.getOrDefault(f1.getId(), Set.of()).size()))
+                        getLikesCount(f2.getId()),
+                        getLikesCount(f1.getId())))
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Film> getCommonFilms(Long userId,Long friendId) {
+        return List.of();
+    }
+
+    private int getLikesCount(Long filmId) {
+        Set<Long> filmLikes = likes.get(filmId);
+        return filmLikes != null ? filmLikes.size() : 0;
+    }
+
+    private Set<Long> getUserLikes(Long userId) {
+        Set<Long> userLikes = new HashSet<>();
+        for (Map.Entry<Long, Set<Long>> entry : likes.entrySet()) {
+            if (entry.getValue().contains(userId)) {
+                userLikes.add(entry.getKey());
+            }
+        }
+        return userLikes;
     }
 
     @Override
@@ -64,6 +96,18 @@ public class InMemoryFilmStorage implements FilmStorage {
 
     @Override
     public List<Film> getFilmsByDirector(Long directorId, String sortBy) {
-        return List.of();  // заглушка
+        return new ArrayList<>();
+    }
+
+
+    @Override
+    public void delete(Long filmId) {
+        Film removed = films.remove(filmId);
+
+        if (removed == null) {
+            throw new NotFoundException("Film not found");
+        }
+
+        likes.remove(filmId);
     }
 }
